--- a/app/prj.conf
+++ b/app/prj.conf
@@ -6,3 +6,9 @@
 CONFIG_GPIO=y
 CONFIG_PWM=y
 CONFIG_SMF=y
+
+CONFIG_DISPLAY=y
+CONFIG_LVGL=y
+
+CONFIG_LV_Z_MEM_POOL_SIZE=16384
+CONFIG_MAIN_STACK_SIZE=4096
